# easter-skills-hack-to-hermes

./: .gitignore  .license-meta.json  .mcp.json  .migration_manifest.json  .pre-commit-config.yaml  AGENTS.md  LICENSE  MIGRATION.hermes-patch.md  MIGRATION.md  MIGRATION.skill-port.md  MIGRATION.upstream-sync.md  README.hu.md  README.md  TODO.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: architect.md  backend-coder.md  code-reviewer.md  data-engineer.md  devops-releaser.md  docs-scribe.md  plan-reviewer.md  planner.md  prompt-engineer.md  researcher.md  security-auditor.md
.claude/rules/: agent-protocol.md  anti-hallucination.md  follow-up-pr-until-merged.md  minimax-websearch.md  no-deviations.md  no-drift-deferral.md  no-excuses.md  no-lint-silencers.md  no-pr-merge-without-green-ci.md  pull-main-after-pr-merge.md  rebase-worktree-before-restart.md  worktree-pr-workflow.md
.codex/: config.toml
.codex/agents/: architect.toml  backend-coder.toml  code-reviewer.toml  data-engineer.toml  devops-releaser.toml  docs-scribe.toml  frontend-coder.toml  plan-reviewer.toml  planner.toml  prompt-engineer.toml  qa-e2e-tester.toml  researcher.toml  security-auditor.toml  ux-designer.toml
.github/workflows/: ci.yml
.workflow-scripts/: plan-repair.js  plan-review.js
docs/: development.hu.md  development.md  installation-dev.hu.md  installation-dev.md  installation-hermes.hu.md  installation-hermes.md  installation-release.hu.md  installation-release.md  installation-verify.hu.md  installation-verify.md  installation.hu.md  installation.md  maybe-patch-points.md  migration-mechanics.hu.md  migration-mechanics.md  migration.hu.md  migration.md  patches.hu.md  patches.md  scripts.hu.md  scripts.md  skill-creator.hu.md  skill-creator.md  usage.hu.md  usage.md  workflows.hu.md  workflows.md
docs/check-implementation-2/: SPEC.md  findings.json  index.html
docs/plans/: 00-index.md  01-overview.md  02-architecture.md  03-plugin-spec.md  04-script-1-patch.md  07-skill-creator-migration.md  09-test-strategy.md  11-sub-agent-delegation-map.md  12-risks-and-open-questions.md  README.md  _plan_reviews.md  _synthesis.md  _workflow_output.json
docs/research/: upstream-audit-code-reviewer.md  upstream-audit-prompt-engineer.md  upstream-audit-security-auditor.md  upstream-audit-validated-r1.md  upstream-audit-validated-r2.md  upstream-audit-validated.md
docs/review/: PLAN_FIXES_ROUND4.md  TASK_E_PROMPT_EDITS.md
plans/: 00-index.md  01-overview.md  02-architecture.md  03-plugin-spec.md  04-script-1-patch.md  05-script-1-task-e-toggle.md  06-script-2-profiles.md  07-skill-creator-migration.md  08-migration-note-format.md  09-test-strategy.md  10-toolchain-and-conventions.md  11-sub-agent-delegation-map.md  12-risks-and-open-questions.md  13-script-3-report.md  README.md  _diagnose.md  _v2_review_raw.json  _v2_reviews.md
plans/_research/: anthropicCreator.json  hermesSkillConventions.json  profileSystem.json  taskECandidates.json  truncation.json
scripts/: build-release.sh  easter-hermes-sorry-skills-install-profiles.sh  easter-hermes-sorry-skills-install.sh  easter-hermes-sorry-skills-patch-hermes.sh  easter-hermes-sorry-skills-patch.sh  easter-hermes-sorry-skills-profiles.sh  easter-hermes-sorry-skills-report.sh
skills/migration-claude-skill-creator/: MIGRATION.md  MIGRATION.patch  UPSTREAM_COMMIT.txt
skills/skill-creator/: SKILL.md  SKILL.md.short  _subprocess.py
src/easter_hermes_sorry_skills/: __init__.py  _advisory.py  _advisory_ast.py  _cli_profiles_apply.py  _cli_profiles_apply_io.py  _cli_profiles_audit.py  _cli_profiles_audit_bindings.py  _cli_profiles_audit_imports.py  _cli_profiles_audit_types.py  _cli_profiles_bilingual.py  _cli_profiles_bindings.py  _cli_profiles_cli.py  _cli_profiles_cli_build.py  _cli_profiles_cli_flags.py  _cli_profiles_cli_help.py  _cli_profiles_cli_options.py  _cli_profiles_orchestrator.py  _cli_profiles_pipeline.py  _cli_profiles_profiles.py  _cli_profiles_report.py  _cli_profiles_row.py  _cli_profiles_run.py  _cli_profiles_skill.py  _cli_profiles_table.py  _cli_profiles_walk.py  _cli_report_cmd.py  _cli_report_helpers.py  _cli_report_helpers_consts.py  _cli_report_helpers_emit.py  _cli_report_helpers_parse.py  _cli_report_rows.py  (+69 more)
tests/: conftest.py  test_advisory.py  test_i18n.py  test_i18n_bilingual.py  test_plugin_manifest.py  test_register.py
tools/: __init__.py  _migration_checks.py  _migration_inspect.py  _migration_manifest.py  _migration_paths.py  check_bilingual.py  check_line_count.py  check_migration_note.py  mypy_wrapper.sh  skill_usage.pyi
(+237 files in other folders)
