[project]
name = "hermes-skill-creator-plugin"
version = "0.1.0"
description = "Hermes skill-creator plugin + migration scripts (Phase 5)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Hermes Skills Hack Team" }]
dependencies = [
    "click>=8.1",
    # ruamel.yaml (not pyyaml) — preserves comment order + round-trips
    # frontmatter. Required by plans/08-migration-note-format.md (D6
    # determinism: byte-identical output across runs).
    "ruamel.yaml>=0.18",
    "pyyaml>=6",
    "python-frontmatter>=1.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "wemake-python-styleguide>=1.0",
    "pre-commit>=4.0",
]

[project.scripts]
hermes-skill-creator-patch = "hermes_skill_creator_plugin.cli_patch:_main_entry"
hermes-skill-creator-profiles = "hermes_skill_creator_plugin.cli_profiles:main"
hermes-skill-creator-report = "hermes_skill_creator_plugin.cli_report:_main_entry"
hermes-skill-creator-install = "hermes_skill_creator_plugin.skill_installer:install"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_skill_creator_plugin"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=hermes_skill_creator_plugin --cov=tools --cov=tests.conftest --cov-branch --cov-fail-under=100"
